# torrtik

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: main.cpp
config/: trrtconfig.h.in
src/: manager.h  message.h  metainfo.cpp  metainfo.h  msg_deserialize.h  msg_serialize.h  peer.cpp  peer.h  tracker.cpp  tracker.h
src/bencoding/: bdec.cpp  bdec.h  benc.cpp  benc.h  benctypes.cpp  benctypes.h
src/connection/: tcppeer.h
src/logging/: log.h
src/serial/: read.h  write.h
src/utils/: concepts.h  hashing.cpp  hashing.h  pointers.h  urlencode.cpp  urlencode.h  visitor.h
test/: benc_test.cpp  bendec_test.cpp  msg_deserialize_test.cpp  msg_serialize_test.cpp
